@@ -1,5 +1,6 @@
 
-* GUI, settings: move directories to GUI > Configure ...
+* use wxToggleBitmapButton buttons on sidebar>functions (buttons that make
+  hwhm and shape equal for all functions)
 
 * GUI: replace XOR drawing with wxOverlay
 
@@ -26,12 +27,14 @@
 
 * add functions cot and coth
 
-* GUI: Help > Examples
-
 * GUI: pre-defined GUI configuration `black-on-white`
 
 * GUI, main plot configuration: add option to change the width and style
   of the sum (and perhaps also function lines)
+
+- refactor sidebar; use wxDataViewCtrl for the lists at the sidebar,
+  rewrite ListWithColors::populate(), add sorting by clicking on column
+  header (use case: sort functions by centers)
 
 ---
 
@@ -146,16 +149,7 @@
            the constraints could be automatic for some function parameters,
 	   e.g. "guess PseudoVoigt" could give shape with bounds <0,1>
 
-* when wxWidgets 3 is in the major Linux distributions:
-  - open-file dialog (with preview) will use xybrowser.cpp
-  - file dialogs will be changed to take adventage of custom controls:
-      * Choose log file: add "log also output" checkbox
-      * Data > Export will be done in one step
-      * "Export formula" dialog will have formula-export-style option
-  - use wxDataViewCtrl in Data > Table, Data > Edit Transformations
-  - use wxDataViewCtrl for the lists at the sidebar,
-    refactor ListWithColors::populate(), add sorting by clicking on column 
-    header (use case: sort functions by centers)
-  - use wxToggleBitmapButton buttons on sidebar>functions (buttons that make 
-    hwhm and shape equal for all functions)
+- use wxFileCtrl in custom open-file dialog (xybrowser.cpp) (wx3)
+
+- custom control in the log file dialogs: "log also output" checkbox (wx3)
 
